--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ body a {
     -ms-transition: 0.5s all;
 	font-family: 'Thasadith', sans-serif;
 }
+.text-wh {
+    color: white;
+}
+
 
 body img {
     max-width: 100%;
