--- a/style.css
+++ b/style.css
@@ -33,6 +33,26 @@ body a {
 body img {
     max-width: 100%;
 }
+.box-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid #ccc;
+    padding: 20px;
+    width: 200px; /* Adjust the width as needed */
+    height: 200px; /* Adjust the height as needed */
+}
+
+.box-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin-right: 10px; /* Adjust the margin as needed */
+}
+
+.blog-info {
+    flex-grow: 1;
+}
 
 a:hover {
     text-decoration: none;
