--- a/style.css
+++ b/style.css
@@ -644,7 +644,7 @@ p.about-text {
     top: 0;
     left: 0;
     opacity: 0.6;
-    background: #000;
+    /*-- background: #000;--*/
 }
 .text h3.heading{
 	color: #fff;
