--- a/style.css
+++ b/style.css
@@ -30,6 +30,13 @@ body a {
 }
 
 
+.title {
+ color: #000000;
+margin-left: -40px; /* Adjust the left margin as needed */
+margin-right: auto;
+ }
+
+
 body img {
     max-width: 100%;
 }
